--- a/public/index.html
+++ b/public/index.html
@@ -238,12 +238,12 @@
 			</li>
       
       <li class="icon ">
-        <h2><img src="team/anonymous.png"/ class="headshot"></h2>
+        <h2><img src="team/hannes.jpg"/ class="headshot"></h2>
         <h2 style="text-align: center;">
          Treasurer,<br />
-         Karin
+         Hannes
        </h2>
-        <p style="text-align: center;">My interest in AI, as a Bachelor’s student in Business Administration, stems from a perceived lack of focus on the matter in the current curriculum. It is well-known that AI will affect the current roles in many fields by automating and streamlining inefficient processes. I believe that gaining knowledge about the competences expected by employers due to these changes is considered important by many of today’s students. I seek to provide this knowledge through Hub AI, while also learning more about what the future may hold for AI advancements.</p>
+        <p style="text-align: center;">As a Bachelor’s student in Business Administration, I am drawn to understanding the impact of AI on the labor market and its role in enhancing business performance. The rapid rise of AI brings significant uncertainty about its potential and impact on society, and I want to explore it on a deeper level to prepare for the transformations it may bring.</p>
 			</li>
       
 		</ul>
