--- a/public/recruitment/index.html
+++ b/public/recruitment/index.html
@@ -73,7 +73,7 @@
         We offer free membership for all students at Lund University. Register <a href="https://forms.gle/sffmPqSSTXEsckDC7">here</a>.
     </li>
     <li>
-        You can also get active in the committee team, shape the future of Hub AI, expand your network, and develop professional and soft skills! Hub AI is growing and wants you on board for this exciting journey! Read more and apply <a href="https://docs.google.com/forms/d/e/1FAIpQLSfFhZ-Zko8D8Z6H4lM7za0pDJvzdsk3UNRxBME5i9Ez6JuwjQ/viewform?usp=sf_link">here</a>.
+        You can also get active in the committee team, shape the future of Hub AI, expand your network, and develop professional and soft skills! Hub AI is growing and wants you on board for this exciting journey! Read more and apply <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP5oV-WWJg5S4yRzK67_cjs1fOACUY1JRDEp2bqYXMpmsohw/viewform?usp=dialog">here</a>.
     </li> 
 </ul>
 
