added Diana pic+text

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@ At Hub AI, I lead the organization toward our goals, overseeing administration, 
 			</li>
       
       <li class="icon ">
-        <h2><img src="team/dasha2.jpg"/ class="headshot"></h2>
+        <h2><img src="team/diana.jpg"/ class="headshot"></h2>
         <h2 style="text-align: center;">
          Head of External Partnerships,<br />
-         Daria
+         Diana
        </h2>
         <p style="text-align: center;"> Currently I am pursuing a MSc in Development Studies majoring in Politics. My interests lie within the public and security domains, as well as economic development of the states. Thus, I could not help but wonder how the new technology, AI specifically, shape the world we live in? Also, having a passion for diplomacy, I love to negotiate with others, which led me to the position of Head of the External Partnership Committee. At Hub AI, I connect businesses and organisations with students, and make such cooperations smooth and fruitful.</p>
 			</li>
